[gd_scene load_steps=3 format=3 uid="uid://bt74kgu67tnxg"]

[ext_resource type="Script" uid="uid://dhfhsla164f80" path="res://scripts/ui/main_scene.gd" id="1_51l7b"]
[ext_resource type="Script" uid="uid://cs73sg5vom7ql" path="res://scripts/components/juicy_text_edit.gd" id="2_h3n2m"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_51l7b")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuBar" type="MenuBar" parent="VBoxContainer"]
layout_mode = 2

[node name="File" type="PopupMenu" parent="VBoxContainer/MenuBar"]
item_count = 4
item_0/text = "New"
item_0/id = 0
item_1/text = "Open"
item_1/id = 1
item_2/text = "Save"
item_2/id = 2
item_3/text = "Save As"
item_3/id = 3

[node name="Edit" type="PopupMenu" parent="VBoxContainer/MenuBar"]
item_count = 4
item_0/text = "Undo"
item_0/id = 0
item_1/text = "Redo"
item_1/id = 1
item_2/text = "Find"
item_2/id = 2
item_3/text = "Replace"
item_3/id = 3

[node name="Toolbar" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="NewButton" type="Button" parent="VBoxContainer/Toolbar"]
layout_mode = 2
text = "New"

[node name="OpenButton" type="Button" parent="VBoxContainer/Toolbar"]
layout_mode = 2
text = "Open"

[node name="SaveButton" type="Button" parent="VBoxContainer/Toolbar"]
layout_mode = 2
text = "Save"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/Toolbar"]
layout_mode = 2

[node name="UndoButton" type="Button" parent="VBoxContainer/Toolbar"]
layout_mode = 2
text = "Undo"

[node name="RedoButton" type="Button" parent="VBoxContainer/Toolbar"]
layout_mode = 2
text = "Redo"

[node name="MainArea" type="HSplitContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TextEditor" type="TextEdit" parent="VBoxContainer/MainArea"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Start typing to create your document..."
scroll_smooth = true
script = ExtResource("2_h3n2m")

[node name="StatusBar" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="LineLabel" type="Label" parent="VBoxContainer/StatusBar"]
layout_mode = 2
text = "Line: 1"

[node name="ColumnLabel" type="Label" parent="VBoxContainer/StatusBar"]
layout_mode = 2
text = "Column: 1"

[node name="FilenameLabel" type="Label" parent="VBoxContainer/StatusBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "Untitled"
horizontal_alignment = 2

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 2
size = Vector2i(800, 600)
ok_button_text = "Open"
file_mode = 0
access = 2

[node name="SaveFileDialog" type="FileDialog" parent="."]
title = "Save File"
initial_position = 2
size = Vector2i(800, 600)
access = 2
